[gd_scene load_steps=5 format=3 uid="uid://b6ieldb43h7io"]

[ext_resource type="Script" path="res://Scripts/titlescreen.gd" id="1_mykpq"]
[ext_resource type="Texture2D" uid="uid://c3c78tpt0g0lx" path="res://Textures/467302757_621994370161669_1258008595267831897_n.jpg" id="1_uqqsk"]
[ext_resource type="Texture2D" uid="uid://5iemco4b0dxw" path="res://Textures/AAAAA.png" id="2_urln7"]
[ext_resource type="PackedScene" uid="uid://cxxl07w4noxq7" path="res://Scenes/Settings/settingsmenu.tscn" id="4_0mhyb"]

[node name="Titlescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mykpq")

[node name="BackgroundTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_urln7")
expand_mode = 3
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitlescreenTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
texture = ExtResource("1_uqqsk")
expand_mode = 3
stretch_mode = 5

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../OptionButton")
focus_previous = NodePath("../ExitButton")
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="OptionButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../StartButton")
theme_override_font_sizes/font_size = 20
text = "Options"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../OptionButton")
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="SettingsMenu" parent="MarginContainer" instance=ExtResource("4_0mhyb")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
